package controller;

public class AfiliacaoController {

    public AfiliacaoController() {

    }

}